# stock-picks-optimizer

./: .envrc  .gitignore  .stock-picks-optimizer.config.example.yml  LICENSE  Makefile  README.md  biome.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: install.sh
src/: index.tsx
stock_picks_optimizer/: __init__.py  bootstrap.py  constants.py  main.py  test_main.py
stock_picks_optimizer/core/domain/: models.py
stock_picks_optimizer/core/use_cases/: __init__.py  add_default_stock_group.py  add_stock_group.py  check_stock_group_exists_by_name.py  ensure_app_ready.py  ensure_db_ready.py  fetch_all_stock_groups.py  fetch_stock_group_by_name.py  optimize_stock_groups.py  print_latest_optimization_results.py
stock_picks_optimizer/data/: migrate.py
stock_picks_optimizer/data/migrations/: 0001_create_stock_group_table.sql  0002_create_stock_pick_table.sql
stock_picks_optimizer/domain/: models.py
stock_picks_optimizer/helpers/: process.py
stock_picks_optimizer/stock_picks/: config_manager.py  fetcher.py  models.py  optimizer.py
stock_picks_optimizer/use_cases/: __init__.py  add_default_stock_group.py  add_stock_group.py  ensure_app_ready.py  ensure_db_ready.py  fetch_all_stock_groups.py  fetch_latest_stock_prices.py  optimize_stock_groups.py  print_latest_optimization_results.py  print_optimization_results.py
stock_picks_optimizer/utils/: config_file_manager.py  console.py  process.py  session.py
stock_picks_optimizer/web/: main.py  models.py  test_main.py
stock_picks_optimizer/web/templates/: add-group.jinja  base.jinja  index.j2  index.jinja  new.j2
stock_picks_optimizer/web/templates/partials/: add_group_form.j2  add_pick_section.j2  base.j2  show_group_form.j2  show_groups.j2
tests/e2e/: home.spec.ts
